--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,12 +46,20 @@
       </div>
     </nav>
 
-    <header class="bg-primary text-white">
-      <div class="container text-center">
-        <h1>Welcome to Scrolling Nav</h1>
-        <p class="lead">A landing page template freshly redesigned for Bootstrap 4</p>
+    <header class="bg-dark text-white">
+      <div class="top-header text-center">
       </div>
+      <div class="container text-center">
+        <h1>Welcome to Shawn Fraistat's Portfolio</h1>
+        <img src="./public/images/photo2.png" width="200" alt="Shawn Fraistat photo">
+        <p class="lead"></p>
+      </div>
+
+
     </header>
+
+
+
 
     <section id="about">
       <div class="container">
