--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Scrolling Nav - Start Bootstrap Template</title>
+    <title>Shawn Fraistat | Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./assets/styles/main.css" rel="stylesheet">
+    <link href="assets/styles/main.css" rel="stylesheet">
 
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+    <!-- jQuery ui -->
+    <link href="vendor/jquery-ui-1.12.1.custom/jquery-ui.css" rel="stylesheet">
+
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Anton|Josefin+Sans|Nunito+Sans|Raleway" rel="stylesheet">
 
   </head>
 
@@ -36,7 +42,10 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -46,55 +55,159 @@
       </div>
     </nav>
 
-    <header class="bg-dark text-white">
-      <div class="top-header text-center">
-      </div>
+    <header class="bg-dark">
       <div class="container text-center">
-        <h1>Welcome to Shawn Fraistat's Portfolio</h1>
-        <img src="./public/images/photo2.png" width="200" alt="Shawn Fraistat photo">
-        <p class="lead"></p>
       </div>
-
-
+      <div class="top-header text-center">
+        <img src="./public/images/photo2.png" class="my-photo" alt="Shawn Fraistat photo">
+      </div>
     </header>
 
-
-
+    <div class="text-center bg-light name-section">
+      <h1>Shawn Fraistat</h1>
+      <h3>Web-Developer | Scholar | Playwright</h3>
+    </div>
 
     <section id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About this page</h2>
-            <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-            <ul>
-              <li>Clickable nav links that smooth scroll to page sections</li>
-              <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-              <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-              <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-            </ul>
+            <div class="section-header">
+              <h2>about</h2>
+              <div class="accent-bar"></div>
+            </div>
+            <div class="about-text">
+            <p>
+              I am a full-stack web developer and published scholar with a background in higher education and a deep interest in politics. Having received a PhD in political theory from Yale University in 2014, I spent several years teaching and conducting research at universities including Yale, Quinnipiac University, the University of New Hampshire, and Brown.
+            </p>
+            <p>
+              During that time, my research focused on how to cultivate a more caring politics that protects the most vulnerable members of society. As my work progressed, I became increasingly interested not only in considering socio-political problems abstractly but in taking an active role in solving them. As a result, I pivoted to a career in tech, which affords many exciting opportunities to help make the world a better place.
+            </p>
+            <p>
+              I am currently enrolled in General Assembly's Web Development Immersive course, further developing my skills in HTML, CSS, Javascript, Ruby on Rails, and React. I am eager to utilize those skills for the sake of progressive change, and I believe that my experience, expertise, diligence, and drive will make me an asset to employers.
+            </p>
+            </div>
+            <p class="text-center resume-text resume-link" href="public/Fraistat-Resume.pdf">My Resume
+              <img src="./public/images/pdf-icon2.png" width="25px" height="25px" class="resume-link" href="public/Fraistat-Resume.pdf">
+            </p>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="services" class="bg-light">
+    <section id="projects" class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Services we offer</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+            <div class="section-header">
+              <h2>projects</h2>
+              <div class="accent-bar"></div>
+            </div>
+            <div class="row">
+             <div class="col-lg-12 portfolio-item">
+               <div class="card h-100">
+                  <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                 <div class="card-body">
+                   <h4 class="card-title">
+                     <a href="#">Capstone</a>
+                   </h4>
+                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                 </div>
+               </div>
+             </div>
+             <div class="col-lg-6 portfolio-item">
+               <div class="card h-100">
+                 <a href="https://shawnfraistat.github.io/encourage-client/"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                 <div class="card-body">
+                   <h4 class="card-title">
+                     <a href="https://shawnfraistat.github.io/encourage-client/">eNCOURAGE</a>
+                   </h4>
+                   <p class="card-text">This app shares advice and encouragement with users, based upon their interest areas and preferences.
+                    The advice/encouragement is authored by other users and stored on the server.
+                    The app also features sentiment analysis, changing the back- ground color depending on the words used in each piece of advice.
+                    If you want to explore the site without signing up, you can sign in using the dummy credentials username: a, password: a.</p>
+                 </div>
+               </div>
+             </div>
+             <div class="col-lg-6 portfolio-item">
+               <div class="card h-100">
+                 <a href="https://shawnfraistat.github.io/tic-tac-toe-client/"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                 <div class="card-body">
+                   <h4 class="card-title">
+                     <a href="https://shawnfraistat.github.io/tic-tac-toe-client/">Tic-Tac-Toe</a>
+                   </h4>
+                   <p class="card-text">An app that allows users to play a game of tic-tac-toe against themselves or an AI player with three different difficulty settings.
+                  Users can sign up to create a user profile that will allow them to save and load games. Logged in users can also customize the colors of the x and o markers.
+                  If you want to explore the site without signing up, you can sign in using the dummy credentials username: a, password: a.</p>
+                 </div>
+               </div>
+             </div>
+             <div class="col-lg-6 portfolio-item">
+               <div class="card h-100">
+                 <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                 <div class="card-body">
+                   <h4 class="card-title">
+                     <a href="#">Game of Life</a>
+                   </h4>
+                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+                 </div>
+               </div>
+             </div>
+             <div class="col-lg-6 portfolio-item">
+               <div class="card h-100">
+                 <a href="https://shawnfraistat.github.io/simon/"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                 <div class="card-body">
+                   <h4 class="card-title">
+                     <a href="https://shawnfraistat.github.io/simon/">Simon</a>
+                   </h4>
+                   <p class="card-text">This application implements a version of the "Simon" game--the program displays a random sequence of colors, which users must memorize and repeat.</p>
+                 </div>
+               </div>
+             </div>
+           </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="contact">
+    <section id="skills">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Contact us</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+            <div class="section-header">
+              <h2>skills</h2>
+              <div class="accent-bar"></div>
+            </div>
+            <div class="container skill-list">
+              <img class="icon" src='./public/icons/html5/html5-original-wordmark.svg' alt="HTML5">
+              <img class="icon" src='./public/icons/css3/css3-original-wordmark.svg' alt="CSS3">
+              <img class="icon" src='./public/icons/javascript/javascript-original.svg' alt="JavaScript">
+              <img class="icon" src='./public/icons/ruby/ruby-original-wordmark.svg' alt="Ruby">
+              <img class="icon" src='./public/icons/rails/rails-original-wordmark.svg' alt="Ruby on Rails">
+              <img class="icon" src='./public/icons/mongodb/mongodb-original-wordmark.svg' alt="MongoDB">
+              <img class="icon" src='./public/icons/bootstrap/bootstrap-plain-wordmark.svg' alt="Bootstrap">
+              <img class="icon" src='./public/icons/sass/sass-original.svg' alt="Sass">
+              <img class="icon" src='./public/icons/handlebars/handlebars-original-wordmark.svg' alt="Handlebars">
+              <img class="icon" src='./public/icons/jquery/jquery-original-wordmark.svg' alt="jQuery">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <div class="section-header">
+              <h2>contact</h2>
+              <div class="accent-bar"></div>
+            </div>
+            <div class="contact-list">
+              <img class="contact-button" src="./public/images/mail2.png">
+              <img class="contact-button" src="./public/icons/linkedin/linkedin-plain.svg">
+              <img class="contact-button" src="./public/icons/github/github-original.svg">
+            </div>
           </div>
         </div>
       </div>
@@ -103,7 +216,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Shawn Fraistat 2018</p>
       </div>
       <!-- /.container -->
     </footer>
@@ -118,6 +231,12 @@
     <!-- Custom JavaScript for this theme -->
     <script src="assets/scripts/index.js"></script>
 
+    <!-- jQuery ui -->
+    <script src="vendor/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
+
+    <!-- EZView.js -->
+    <script src="assets/scripts/EZView.js"></script>
+    <script src="assets/scripts/draggable.js"></script>
   </body>
 
 </html>
