Add Filler About Text

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
               <div class="accent-bar"></div>
             </div>
             <div class="about-text">
-            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <!-- <p>
               I am a full-stack web developer and published scholar with a background in higher education and a deep interest in politics. Having received a PhD in political theory from Yale University in 2014, I spent several years teaching and conducting research at universities including Yale, Quinnipiac University, the University of New Hampshire, and Brown.
             </p>
             <p>
@@ -85,7 +86,7 @@
             </p>
             <p>
               I am currently enrolled in General Assembly's Web Development Immersive course, further developing my skills in HTML, CSS, Javascript, Ruby on Rails, and React. I am eager to utilize those skills for the sake of progressive change, and I believe that my experience, expertise, diligence, and drive will make me an asset to employers.
-            </p>
+            </p> -->
             </div>
             <p class="text-center resume-text resume-link" href="public/Fraistat-Resume.pdf">My Resume
               <img src="./public/images/pdf-icon2.png" width="25px" height="25px" class="resume-link" href="public/Fraistat-Resume.pdf">
