Submit Updated Index.html

--- a/index.html
+++ b/index.html
@@ -117,29 +117,31 @@
                </div>
              </div>
              <div class="col-lg-6 portfolio-item">
-               <div class="card h-100">
-                 <a href="https://shawnfraistat.github.io/encourage-client/"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+               <div class="card h-100 card-image-top">
+                 <a href="https://shawnfraistat.github.io/encourage-client/"></a>
+                 <div class="encourage-div">
+                 </div>
                  <div class="card-body">
                    <h4 class="card-title">
                      <a href="https://shawnfraistat.github.io/encourage-client/">eNCOURAGE</a>
                    </h4>
-                   <p class="card-text">This app shares advice and encouragement with users, based upon their interest areas and preferences.
-                    The advice/encouragement is authored by other users and stored on the server.
-                    The app also features sentiment analysis, changing the back- ground color depending on the words used in each piece of advice.
-                    If you want to explore the site without signing up, you can sign in using the dummy credentials username: a, password: a.</p>
+                   <p class="card-text">This app allows users to submit, share, and view advice and encouragement, based upon their interests and preferences.
+                    To explore the site without signing up, sign in with the following dummy credentials: username: a, password: a.</p>
                  </div>
                </div>
              </div>
              <div class="col-lg-6 portfolio-item">
                <div class="card h-100">
-                 <a href="https://shawnfraistat.github.io/tic-tac-toe-client/"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                   <a href="https://shawnfraistat.github.io/tic-tac-toe-client/">
+                     <div class="tic-tac-toe-div">
+                     </div>
+                   </a>
                  <div class="card-body">
                    <h4 class="card-title">
                      <a href="https://shawnfraistat.github.io/tic-tac-toe-client/">Tic-Tac-Toe</a>
                    </h4>
-                   <p class="card-text">An app that allows users to play a game of tic-tac-toe against themselves or an AI player with three different difficulty settings.
-                  Users can sign up to create a user profile that will allow them to save and load games. Logged in users can also customize the colors of the x and o markers.
-                  If you want to explore the site without signing up, you can sign in using the dummy credentials username: a, password: a.</p>
+                   <p class="card-text">An app that allows users to play a game of tic-tac-toe against themselves, a human opponent over the internet, or an AI player with three different difficulty settings.
+                     To explore the site without signing up, sign in with the following dummy credentials: username: a, password: a.</p>
                  </div>
                </div>
              </div>
@@ -156,7 +158,9 @@
              </div>
              <div class="col-lg-6 portfolio-item">
                <div class="card h-100">
-                 <a href="https://shawnfraistat.github.io/simon/"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                 <a href="https://shawnfraistat.github.io/simon/"></a>
+                 <div class="simon-div">
+                 </div>
                  <div class="card-body">
                    <h4 class="card-title">
                      <a href="https://shawnfraistat.github.io/simon/">Simon</a>
@@ -206,8 +210,8 @@
             </div>
             <div class="contact-list">
               <img class="contact-button" src="./public/images/mail2.png">
-              <img class="contact-button" src="./public/icons/linkedin/linkedin-plain.svg">
-              <img class="contact-button" src="./public/icons/github/github-original.svg">
+              <a href="https://www.linkedin.com/in/shawn-fraistat/"><img class="contact-button" src="./public/icons/linkedin/linkedin-plain.svg"></a>
+              <a href="https://github.com/shawnfraistat"><img class="contact-button" src="./public/icons/github/github-original.svg"></a>
             </div>
           </div>
         </div>
