--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <!-- Custom styles for this template -->
     <link href="assets/styles/main.css" rel="stylesheet">
 
+    <!-- Hover -->
+    <link href="assets/styles/hover.css" rel="stylesheet">
+
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
@@ -69,7 +72,7 @@
     </div>
 
     <section id="about">
-      <div class="container">
+      <div class="container about-div">
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <div class="section-header">
