Add animation and hover effects; about text
Add animation to sections, as well as hover effects on buttons.
Adjusted about text, which I am still not happy with.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <section id="about">
-      <div class="container about-div">
+      <div class="container about-container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <div class="section-header">
@@ -80,16 +80,7 @@
               <div class="accent-bar"></div>
             </div>
             <div class="about-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            <!-- <p>
-              I am a full-stack web developer and published scholar with a background in higher education and a deep interest in politics. Having received a PhD in political theory from Yale University in 2014, I spent several years teaching and conducting research at universities including Yale, Quinnipiac University, the University of New Hampshire, and Brown.
-            </p>
-            <p>
-              During that time, my research focused on how to cultivate a more caring politics that protects the most vulnerable members of society. As my work progressed, I became increasingly interested not only in considering socio-political problems abstractly but in taking an active role in solving them. As a result, I pivoted to a career in tech, which affords many exciting opportunities to help make the world a better place.
-            </p>
-            <p>
-              I am currently enrolled in General Assembly's Web Development Immersive course, further developing my skills in HTML, CSS, Javascript, Ruby on Rails, and React. I am eager to utilize those skills for the sake of progressive change, and I believe that my experience, expertise, diligence, and drive will make me an asset to employers.
-            </p> -->
+              I am full-stack web-developer with a lifelong love of programming. I take tremendous pleasure in solving problems and taking on difficult technical challenges, and I am passionate about building products and services that will improve people's lives.
             </div>
             <p class="text-center resume-text resume-link" href="public/Fraistat-Resume.pdf">My Resume
               <img src="./public/images/pdf-icon2.png" width="25px" height="25px" class="resume-link" href="public/Fraistat-Resume.pdf">
@@ -103,12 +94,12 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <div class="section-header">
+            <div class="section-header projects1">
               <h2>projects</h2>
               <div class="accent-bar"></div>
             </div>
             <div class="row">
-             <div class="col-lg-12 portfolio-item">
+             <div class="col-lg-12 portfolio-item projects2">
                <div class="card h-100">
                   <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                  <div class="card-body">
@@ -120,10 +111,11 @@
                </div>
              </div>
              <div class="col-lg-6 portfolio-item">
-               <div class="card h-100 card-image-top">
-                 <a href="https://shawnfraistat.github.io/encourage-client/"></a>
-                 <div class="encourage-div">
-                 </div>
+               <div class="card h-100 card-image-top projects3">
+                 <a href="https://shawnfraistat.github.io/encourage-client/">
+                   <div class="encourage-div">
+                   </div>
+                 </a>
                  <div class="card-body">
                    <h4 class="card-title">
                      <a href="https://shawnfraistat.github.io/encourage-client/">eNCOURAGE</a>
@@ -133,7 +125,7 @@
                  </div>
                </div>
              </div>
-             <div class="col-lg-6 portfolio-item">
+             <div class="col-lg-6 portfolio-item projects4">
                <div class="card h-100">
                    <a href="https://shawnfraistat.github.io/tic-tac-toe-client/">
                      <div class="tic-tac-toe-div">
@@ -148,7 +140,7 @@
                  </div>
                </div>
              </div>
-             <div class="col-lg-6 portfolio-item">
+             <div class="col-lg-6 portfolio-item projects5">
                <div class="card h-100">
                  <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                  <div class="card-body">
@@ -159,11 +151,12 @@
                  </div>
                </div>
              </div>
-             <div class="col-lg-6 portfolio-item">
+             <div class="col-lg-6 portfolio-item projects6">
                <div class="card h-100">
-                 <a href="https://shawnfraistat.github.io/simon/"></a>
-                 <div class="simon-div">
-                 </div>
+                 <a href="https://shawnfraistat.github.io/simon/">
+                   <div class="simon-div">
+                   </div>
+                 </a>
                  <div class="card-body">
                    <h4 class="card-title">
                      <a href="https://shawnfraistat.github.io/simon/">Simon</a>
@@ -179,24 +172,24 @@
     </section>
 
     <section id="skills">
-      <div class="container">
+      <div class="container skills-container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <div class="section-header">
+            <div class="section-header skills-header">
               <h2>skills</h2>
               <div class="accent-bar"></div>
             </div>
-            <div class="container skill-list">
-              <img class="icon" src='./public/icons/html5/html5-original-wordmark.svg' alt="HTML5">
-              <img class="icon" src='./public/icons/css3/css3-original-wordmark.svg' alt="CSS3">
-              <img class="icon" src='./public/icons/javascript/javascript-original.svg' alt="JavaScript">
-              <img class="icon" src='./public/icons/ruby/ruby-original-wordmark.svg' alt="Ruby">
-              <img class="icon" src='./public/icons/rails/rails-original-wordmark.svg' alt="Ruby on Rails">
-              <img class="icon" src='./public/icons/mongodb/mongodb-original-wordmark.svg' alt="MongoDB">
-              <img class="icon" src='./public/icons/bootstrap/bootstrap-plain-wordmark.svg' alt="Bootstrap">
-              <img class="icon" src='./public/icons/sass/sass-original.svg' alt="Sass">
-              <img class="icon" src='./public/icons/handlebars/handlebars-original-wordmark.svg' alt="Handlebars">
-              <img class="icon" src='./public/icons/jquery/jquery-original-wordmark.svg' alt="jQuery">
+            <div class="container skills-list">
+              <img class="icon hvr-grow" src='./public/icons/html5/html5-original-wordmark.svg' alt="HTML5">
+              <img class="icon hvr-rotate" src='./public/icons/css3/css3-original-wordmark.svg' alt="CSS3">
+              <img class="icon hvr-shrink" src='./public/icons/javascript/javascript-original.svg' alt="JavaScript">
+              <img class="icon hvr-buzz" src='./public/icons/ruby/ruby-original-wordmark.svg' alt="Ruby">
+              <img class="icon hvr-pop" src='./public/icons/rails/rails-original-wordmark.svg' alt="Ruby on Rails">
+              <img class="icon hvr-pulse" src='./public/icons/mongodb/mongodb-original-wordmark.svg' alt="MongoDB">
+              <img class="icon hvr-skew" src='./public/icons/bootstrap/bootstrap-plain-wordmark.svg' alt="Bootstrap">
+              <img class="icon hvr-sink" src='./public/icons/sass/sass-original.svg' alt="Sass">
+              <img class="icon hvr-shrink" src='./public/icons/handlebars/handlebars-original-wordmark.svg' alt="Handlebars">
+              <img class="icon hvr-bubble-float-top" src='./public/icons/jquery/jquery-original-wordmark.svg' alt="jQuery">
             </div>
           </div>
         </div>
@@ -204,17 +197,17 @@
     </section>
 
     <section id="contact" class="bg-light">
-      <div class="container">
+      <div class="container contact-container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <div class="section-header">
+            <div class="section-header contact-header">
               <h2>contact</h2>
               <div class="accent-bar"></div>
             </div>
             <div class="contact-list">
-              <img class="contact-button" src="./public/images/mail2.png">
-              <a href="https://www.linkedin.com/in/shawn-fraistat/"><img class="contact-button" src="./public/icons/linkedin/linkedin-plain.svg"></a>
-              <a href="https://github.com/shawnfraistat"><img class="contact-button" src="./public/icons/github/github-original.svg"></a>
+              <img class="contact-button hvr-grow" src="./public/images/mail2.png" alt="Email me">
+              <a href="https://www.linkedin.com/in/shawn-fraistat/"><img class="contact-button hvr-grow" src="./public/icons/linkedin/linkedin-plain.svg" alt="LinkedIn page"></a>
+              <a href="https://github.com/shawnfraistat"><img class="contact-button hvr-grow" src="./public/icons/github/github-original.svg" alt="Github page"></a>
             </div>
           </div>
         </div>
