Add Links to GitHub Repos in Projects
Projects now include links to their GitHub repositories

--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
                    </h4>
                    <p class="card-text">This app allows users to submit, share, and view advice and encouragement, based upon their interests and preferences.
                     To explore the site without signing up, sign in with the following dummy credentials: username: a, password: a.</p>
+                    <p>Click <a href="https://shawnfraistat.github.io/encourage-client/">here</a> for live site</p>
+                    <p>Click <a href="https://github.com/shawnfraistat/encourage-client">here</a> for client GitHub repo</p>
+                    <p>Click <a href="https://github.com/shawnfraistat/encourage-api">here</a> for server GitHub repo</p>
                  </div>
                </div>
              </div>
@@ -137,6 +140,8 @@
                    </h4>
                    <p class="card-text">An app that allows users to play a game of tic-tac-toe against themselves, a human opponent over the internet, or an AI player with three different difficulty settings.
                      To explore the site without signing up, sign in with the following dummy credentials: username: a, password: a.</p>
+                     <p>Click <a href="https://shawnfraistat.github.io/tic-tac-toe-client/">here</a> for live site</p>
+                     <p>Click <a href="https://github.com/shawnfraistat/tic-tac-toe-client">here</a> for GitHub repo</p>
                  </div>
                </div>
              </div>
@@ -162,6 +167,8 @@
                      <a href="https://shawnfraistat.github.io/simon/">Simon</a>
                    </h4>
                    <p class="card-text">This application implements a version of the "Simon" game--the program displays a random sequence of colors, which users must memorize and repeat.</p>
+                   <p>Click <a href="https://shawnfraistat.github.io/simon/">here</a> for live site</p>
+                   <p>Click <a href="https://github.com/shawnfraistat/simon">here</a> for GitHub repo</p>
                  </div>
                </div>
              </div>
