Added console.log to Captcha to try to fix it not working

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             captchaContainer = grecaptcha.render('recaptcha-div', {
               'sitekey': '6Lc9CosUAAAAANSfTgW9b9ZPMbrupJO3ClgDyjex',
               'callback': function (response) {
+                console.log(response)
                 if (response.success) {
                   console.log('user solved captcha')
                   window.location.href = "mailto:shawn.fraistat@gmail.com"
