Trying to Parse Captcha Response as JSON object
Response seems to be returned as a nonsensical string. Maybe parsing it
as JSON will fix the issue.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               sitekey: '6Lc9CosUAAAAANSfTgW9b9ZPMbrupJO3ClgDyjex',
               callback: function (response) {
                 console.log(response)
+                console.log(JSON.parse(response))
                 if (response.success) {
                   console.log('user solved captcha')
                   window.location.href = "mailto:shawn.fraistat@gmail.com"
