Parse JSON Not Working; Trying Again By Tweaking Console.log

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
             captchaContainer = grecaptcha.render('recaptcha-div', {
               sitekey: '6Lc9CosUAAAAANSfTgW9b9ZPMbrupJO3ClgDyjex',
               callback: function (response) {
+                var JSONResponse = JSON.parse(resposne)
                 console.log(response)
-                console.log(() => JSON.parse(response))
+                console.log(JSONResponse)
                 if (response.success) {
                   console.log('user solved captcha')
                   window.location.href = "mailto:shawn.fraistat@gmail.com"
