Add Telaroid and Petsitter to Projects; New Skills; Updated Resume
Added Telaroid and Petsitter as projects, and added React and Express
as skills. Also uploaded latest version of resume.

--- a/index.html
+++ b/index.html
@@ -101,26 +101,50 @@
             <div class="row">
              <div class="col-lg-12 portfolio-item projects2">
                <div class="card h-100">
-                  <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                 <div class="card-body">
-                   <h4 class="card-title">
-                     <a href="#">Capstone</a>
-                   </h4>
-                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-                 </div>
+                  <a href="https://shawnfraistat.github.io/petsitter-client/">
+                    <div class="petsitter-div">
+                    </div>
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                     <a href="https://shawnfraistat.github.io/petsitter-client/">Petsitter.io</a>
+                    </h4>
+                    <p class="card-text">Petsitter.io is a full-stack web application that allows users to search for pet sitters in their area, filtering by
+                  location, price, pet type, and so on. To explore the site without signing up, sign in as a client with the following dummy credentials: username: b@b.com, password: b. </p>
+                    <p>Click <a href="https://shawnfraistat.github.io/petsitter-client/">here</a> for live site</p>
+                    <p>Click <a href="https://github.com/shawnfraistat/petsitter-client">here</a> for client GitHub repo</p>
+                    <p>Click <a href="https://github.com/shawnfraistat/petsitter-api">here</a> for server GitHub repo</p>
+                </div>
                </div>
              </div>
+              <div class="col-lg-6 portfolio-item projects3">
+                <div class="card h-100">
+                  <a href="https://nosebleed-section.github.io/teleroid-client/">
+                    <div class="telaroid-div">
+                    </div>
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      <a href="https://nosebleed-section.github.io/teleroid-client/">Telaroid</a>
+                    </h4>
+                    <p class="card-text">Telaroid is a free photo sharing app. People can upload photos as well as view and comment on photos shared by others. o explore the site without signing up, sign in as a client with the following dummy credentials: username: a, password: a.</p>
+                    <p>Click <a href="https://nosebleed-section.github.io/teleroid-client/">here</a> for live site</p>
+                    <p>Click <a href="https://github.com/Nosebleed-Section/teleroid-client">here</a> for client GitHub repo</p>
+                    <p>Click <a href="https://github.com/Nosebleed-Section/teleroid-api">here</a> for server GitHub repo</p>
+                  </div>
+                </div>
+              </div>
              <div class="col-lg-6 portfolio-item">
-               <div class="card h-100 card-image-top projects3">
+               <div class="card h-100 card-image-top projects4">
                  <a href="https://shawnfraistat.github.io/encourage-client/">
                    <div class="encourage-div">
                    </div>
                  </a>
                  <div class="card-body">
-                   <h4 class="card-title">
-                     <a href="https://shawnfraistat.github.io/encourage-client/">eNCOURAGE</a>
-                   </h4>
-                   <p class="card-text">This app allows users to submit, share, and view advice and encouragement, based upon their interests and preferences.
+                    <h4 class="card-title">
+                      <a href="https://shawnfraistat.github.io/encourage-client/">eNCOURAGE</a>
+                    </h4>
+                    <p class="card-text">This app allows users to submit, share, and view advice and encouragement, based upon their interests and preferences.
                     To explore the site without signing up, sign in with the following dummy credentials: username: a, password: a.</p>
                     <p>Click <a href="https://shawnfraistat.github.io/encourage-client/">here</a> for live site</p>
                     <p>Click <a href="https://github.com/shawnfraistat/encourage-client">here</a> for client GitHub repo</p>
@@ -128,7 +152,7 @@
                  </div>
                </div>
              </div>
-             <div class="col-lg-6 portfolio-item projects4">
+             <div class="col-lg-6 portfolio-item projects5">
                <div class="card h-100">
                    <a href="https://shawnfraistat.github.io/tic-tac-toe-client/">
                      <div class="tic-tac-toe-div">
@@ -142,17 +166,6 @@
                      To explore the site without signing up, sign in with the following dummy credentials: username: a, password: a.</p>
                      <p>Click <a href="https://shawnfraistat.github.io/tic-tac-toe-client/">here</a> for live site</p>
                      <p>Click <a href="https://github.com/shawnfraistat/tic-tac-toe-client">here</a> for GitHub repo</p>
-                 </div>
-               </div>
-             </div>
-             <div class="col-lg-6 portfolio-item projects5">
-               <div class="card h-100">
-                 <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                 <div class="card-body">
-                   <h4 class="card-title">
-                     <a href="#">Game of Life</a>
-                   </h4>
-                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
                  </div>
                </div>
              </div>
@@ -192,6 +205,8 @@
               <img class="icon hvr-shrink" src='./public/icons/javascript/javascript-original.svg' alt="JavaScript">
               <img class="icon hvr-buzz" src='./public/icons/ruby/ruby-original-wordmark.svg' alt="Ruby">
               <img class="icon hvr-pop" src='./public/icons/rails/rails-original-wordmark.svg' alt="Ruby on Rails">
+              <img class="icon hvr-rotate" src='./public/icons/express/express-original-wordmark.svg' alt="Express">
+              <img class="icon hvr-grow" src='./public/icons/react/react-original-wordmark.svg' alt="React">
               <img class="icon hvr-pulse" src='./public/icons/mongodb/mongodb-original-wordmark.svg' alt="MongoDB">
               <img class="icon hvr-skew" src='./public/icons/bootstrap/bootstrap-plain-wordmark.svg' alt="Bootstrap">
               <img class="icon hvr-sink" src='./public/icons/sass/sass-original.svg' alt="Sass">
@@ -245,8 +260,6 @@
     <!-- EZView.js -->
     <script src="assets/scripts/EZView.js"></script>
     <script src="assets/scripts/draggable.js"></script>
-
-
 
   </body>
 
