Pop Resume in New tab; Add Resume to Bottom; Add Titles on Hover
Resume now pops in a new tab instead of opening in current tab via
EZ view. Also added a link to my resume at the bottom of the page.
In addition, added titles to images so they display text on hover.

--- a/index.html
+++ b/index.html
@@ -200,18 +200,18 @@
               <div class="accent-bar"></div>
             </div>
             <div class="container skills-list">
-              <img class="icon hvr-grow" src='./public/icons/html5/html5-original-wordmark.svg' alt="HTML5">
-              <img class="icon hvr-rotate" src='./public/icons/css3/css3-original-wordmark.svg' alt="CSS3">
-              <img class="icon hvr-shrink" src='./public/icons/javascript/javascript-original.svg' alt="JavaScript">
-              <img class="icon hvr-buzz" src='./public/icons/ruby/ruby-original-wordmark.svg' alt="Ruby">
-              <img class="icon hvr-pop" src='./public/icons/rails/rails-original-wordmark.svg' alt="Ruby on Rails">
-              <img class="icon hvr-rotate" src='./public/icons/express/express-original-wordmark.svg' alt="Express">
-              <img class="icon hvr-grow" src='./public/icons/react/react-original-wordmark.svg' alt="React">
-              <img class="icon hvr-pulse" src='./public/icons/mongodb/mongodb-original-wordmark.svg' alt="MongoDB">
-              <img class="icon hvr-skew" src='./public/icons/bootstrap/bootstrap-plain-wordmark.svg' alt="Bootstrap">
-              <img class="icon hvr-sink" src='./public/icons/sass/sass-original.svg' alt="Sass">
-              <img class="icon hvr-shrink" src='./public/icons/handlebars/handlebars-original-wordmark.svg' alt="Handlebars">
-              <img class="icon hvr-bubble-float-top" src='./public/icons/jquery/jquery-original-wordmark.svg' alt="jQuery">
+              <img class="icon hvr-grow" src='./public/icons/html5/html5-original-wordmark.svg' title="HTML5" alt="HTML5">
+              <img class="icon hvr-rotate" src='./public/icons/css3/css3-original-wordmark.svg' title="CSS3" alt="CSS3">
+              <img class="icon hvr-shrink" src='./public/icons/javascript/javascript-original.svg' title="JavaScript" alt="JavaScript">
+              <img class="icon hvr-buzz" src='./public/icons/ruby/ruby-original-wordmark.svg' title="Ruby" alt="Ruby">
+              <img class="icon hvr-pop" src='./public/icons/rails/rails-original-wordmark.svg' title="Ruby on Rails" alt="Ruby on Rails">
+              <img class="icon hvr-rotate" src='./public/icons/express/express-original-wordmark.svg' title="Express" alt="Express">
+              <img class="icon hvr-grow" src='./public/icons/react/react-original-wordmark.svg' title="React" alt="React">
+              <img class="icon hvr-pulse" src='./public/icons/mongodb/mongodb-original-wordmark.svg' title="MongoDB" alt="MongoDB">
+              <img class="icon hvr-skew" src='./public/icons/bootstrap/bootstrap-plain-wordmark.svg' title="Bootstrap" alt="Bootstrap">
+              <img class="icon hvr-sink" src='./public/icons/sass/sass-original.svg' title="Sass" alt="Sass">
+              <img class="icon hvr-shrink" src='./public/icons/handlebars/handlebars-original-wordmark.svg' title="Handlebars" alt="Handlebars">
+              <img class="icon hvr-bubble-float-top" src='./public/icons/jquery/jquery-original-wordmark.svg' title="jQuery" alt="jQuery">
             </div>
           </div>
         </div>
@@ -227,9 +227,10 @@
               <div class="accent-bar"></div>
             </div>
             <div class="contact-list">
-              <a href="mailto:shawn.fraistat@gmail.com"><img class="contact-button hvr-grow" id="email-me" src="./public/images/mail2.png" alt="Email me"></a>
-              <a href="https://www.linkedin.com/in/shawn-fraistat/"><img class="contact-button hvr-grow" src="./public/icons/linkedin/linkedin-plain.svg" alt="LinkedIn page"></a>
-              <a href="https://github.com/shawnfraistat"><img class="contact-button hvr-grow" src="./public/icons/github/github-original.svg" alt="Github page"></a>
+              <a href="mailto:shawn.fraistat@gmail.com"><img class="contact-button hvr-grow" id="email-me" src="./public/images/mail2.png" title="Email me" alt="Email me"></a>
+              <a href="https://www.linkedin.com/in/shawn-fraistat/"><img class="contact-button hvr-grow" src="./public/icons/linkedin/linkedin-plain.svg" title="LinkedIn page" alt="LinkedIn page"></a>
+              <a href="https://github.com/shawnfraistat"><img class="contact-button hvr-grow" src="./public/icons/github/github-original.svg" title="Github page" alt="Github page"></a>
+              <img class="contact-button hvr-grow resume-link" src="./public/images/pdf-icon.png" href="public/Fraistat-Resume.pdf" title="My resume" alt="My resume">
             </div>
           </div>
         </div>
@@ -256,10 +257,6 @@
 
     <!-- jQuery ui -->
     <script src="vendor/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
-
-    <!-- EZView.js -->
-    <script src="assets/scripts/EZView.js"></script>
-    <script src="assets/scripts/draggable.js"></script>
 
   </body>
 
